Python version/specializations/dlv2/parser/DLV2Parser.py
# Generated from DLV2Parser.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class DLV2Parser ( Parser ):

    grammarFileName = "DLV2Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'@'", "<INVALID>", "<INVALID>", "<INVALID>", "','", 
                     "<INVALID>", "<INVALID>", "'}'", "<INVALID>", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "START", "COST_LABEL", "ANY", "IGNORE", 
                      "AT", "INTEGER", "NEW_LINE", "BLANK_SPACE", "COMMA", 
                      "INTEGER_CONSTANT", "IDENTIFIER", "MODEL_END", "STRING_CONSTANT", 
                      "TERMS_BEGIN", "TERMS_END", "WHITE_SPACE" ]

    RULE_answer_set = 0
    RULE_cost = 1
    RULE_level = 2
    RULE_model = 3
    RULE_output = 4
    RULE_predicate_atom = 5
    RULE_term = 6

    ruleNames =  [ "answer_set", "cost", "level", "model", "output", "predicate_atom", 
                   "term" ]

    EOF = Token.EOF
    START=1
    COST_LABEL=2
    ANY=3
    IGNORE=4
    AT=5
    INTEGER=6
    NEW_LINE=7
    BLANK_SPACE=8
    COMMA=9
    INTEGER_CONSTANT=10
    IDENTIFIER=11
    MODEL_END=12
    STRING_CONSTANT=13
    TERMS_BEGIN=14
    TERMS_END=15
    WHITE_SPACE=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Answer_setContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(DLV2Parser.START, 0)

        def model(self):
            return self.getTypedRuleContext(DLV2Parser.ModelContext,0)


        def cost(self):
            return self.getTypedRuleContext(DLV2Parser.CostContext,0)


        def getRuleIndex(self):
            return DLV2Parser.RULE_answer_set

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnswer_set" ):
                return visitor.visitAnswer_set(self)
            else:
                return visitor.visitChildren(self)




    def answer_set(self):

        localctx = DLV2Parser.Answer_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_answer_set)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.match(DLV2Parser.START)
            self.state = 15
            self.model()
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DLV2Parser.COST_LABEL:
                self.state = 16
                self.cost()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CostContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COST_LABEL(self):
            return self.getToken(DLV2Parser.COST_LABEL, 0)

        def NEW_LINE(self):
            return self.getToken(DLV2Parser.NEW_LINE, 0)

        def level(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLV2Parser.LevelContext)
            else:
                return self.getTypedRuleContext(DLV2Parser.LevelContext,i)


        def getRuleIndex(self):
            return DLV2Parser.RULE_cost

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCost" ):
                return visitor.visitCost(self)
            else:
                return visitor.visitChildren(self)




    def cost(self):

        localctx = DLV2Parser.CostContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cost)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(DLV2Parser.COST_LABEL)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DLV2Parser.INTEGER:
                self.state = 20
                self.level()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(DLV2Parser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LevelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(DLV2Parser.INTEGER)
            else:
                return self.getToken(DLV2Parser.INTEGER, i)

        def AT(self):
            return self.getToken(DLV2Parser.AT, 0)

        def getRuleIndex(self):
            return DLV2Parser.RULE_level

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLevel" ):
                return visitor.visitLevel(self)
            else:
                return visitor.visitChildren(self)




    def level(self):

        localctx = DLV2Parser.LevelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_level)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(DLV2Parser.INTEGER)
            self.state = 29
            self.match(DLV2Parser.AT)
            self.state = 30
            self.match(DLV2Parser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL_END(self):
            return self.getToken(DLV2Parser.MODEL_END, 0)

        def predicate_atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLV2Parser.Predicate_atomContext)
            else:
                return self.getTypedRuleContext(DLV2Parser.Predicate_atomContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DLV2Parser.COMMA)
            else:
                return self.getToken(DLV2Parser.COMMA, i)

        def getRuleIndex(self):
            return DLV2Parser.RULE_model

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = DLV2Parser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DLV2Parser.IDENTIFIER:
                self.state = 32
                self.predicate_atom()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DLV2Parser.COMMA:
                    self.state = 33
                    self.match(DLV2Parser.COMMA)
                    self.state = 34
                    self.predicate_atom()
                    self.state = 39
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 42
            self.match(DLV2Parser.MODEL_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def answer_set(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLV2Parser.Answer_setContext)
            else:
                return self.getTypedRuleContext(DLV2Parser.Answer_setContext,i)


        def getRuleIndex(self):
            return DLV2Parser.RULE_output

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput" ):
                return visitor.visitOutput(self)
            else:
                return visitor.visitChildren(self)




    def output(self):

        localctx = DLV2Parser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_output)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DLV2Parser.START:
                self.state = 44
                self.answer_set()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Predicate_atomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DLV2Parser.IDENTIFIER, 0)

        def TERMS_BEGIN(self):
            return self.getToken(DLV2Parser.TERMS_BEGIN, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DLV2Parser.TermContext)
            else:
                return self.getTypedRuleContext(DLV2Parser.TermContext,i)


        def TERMS_END(self):
            return self.getToken(DLV2Parser.TERMS_END, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DLV2Parser.COMMA)
            else:
                return self.getToken(DLV2Parser.COMMA, i)

        def getRuleIndex(self):
            return DLV2Parser.RULE_predicate_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_atom" ):
                return visitor.visitPredicate_atom(self)
            else:
                return visitor.visitChildren(self)




    def predicate_atom(self):

        localctx = DLV2Parser.Predicate_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_predicate_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(DLV2Parser.IDENTIFIER)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DLV2Parser.TERMS_BEGIN:
                self.state = 51
                self.match(DLV2Parser.TERMS_BEGIN)
                self.state = 52
                self.term()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DLV2Parser.COMMA:
                    self.state = 53
                    self.match(DLV2Parser.COMMA)
                    self.state = 54
                    self.term()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.match(DLV2Parser.TERMS_END)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DLV2Parser.IDENTIFIER, 0)

        def INTEGER_CONSTANT(self):
            return self.getToken(DLV2Parser.INTEGER_CONSTANT, 0)

        def predicate_atom(self):
            return self.getTypedRuleContext(DLV2Parser.Predicate_atomContext,0)


        def STRING_CONSTANT(self):
            return self.getToken(DLV2Parser.STRING_CONSTANT, 0)

        def getRuleIndex(self):
            return DLV2Parser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = DLV2Parser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_term)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(DLV2Parser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(DLV2Parser.INTEGER_CONSTANT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.predicate_atom()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.match(DLV2Parser.STRING_CONSTANT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





